2026_01_AnalisisSintactico/analisis-sintactico/src/main/java/edu/url/compiladores/antlr/Expr.g4
grammar Expr;

prog: 'STARTPROG' NEWLINE (instructions)* 'ENDPROG'
    ;

instructions: (expr NEWLINE) 
    | (assign NEWLINE)
    | (conditional NEWLINE)
    ;

assign: IDENTIFICADOR '=' INT
    ;

expr:   expr ('*'|'/') expr    # MulDiv
    |   expr ('+'|'-') expr    # AddSub
    |   INT                    # IntLiteral
    |   '(' expr ')'           # Parens
    |   IDENTIFICADOR          # Id
    ;

conditional: 'IF' expr 'THEN' instructions 'ENDIF'
    ;
	
NEWLINE : [\r\n]+ ;
INT     : [0-9]+ ;
IDENTIFICADOR : ([a-z]|[A-Z])+;
